--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -354,7 +354,8 @@ blink {
   padding: 10.5px 15px 10.5px 11px !important;
 
   border: 1.3px solid rgb(31, 67, 87) !important;
-  background: rgb(164, 224, 232) !important;
+  /* background: rgb(164, 224, 232) !important; */
+  background: rgb(194, 234, 239) !important;
   box-shadow: 0 0 0 1px rgb(134, 213, 224) !important;
 }
 
