--- a/public/css/plugins/app.css
+++ b/public/css/plugins/app.css
@@ -3536,3 +3536,22 @@ box-shadow: 0 3px 7px 0 rgba(73, 192, 208, 0.7);
     color: #121d33;
   }
 }
+
+.t-head {
+  text-transform: uppercase;
+  font-weight: 600 !important;
+  text-align: center !important;
+  word-spacing: 17px;
+  color: rgba(255, 255, 255, 0.37);
+  padding: 15px !important;
+  opacity: 0.5 !important;
+  background: transparent !important;
+  box-shadow: none !important;
+
+  border-radius: 3px !important;
+}
+@media screen and (max-width: 792px) {
+  .t-head {
+    padding: 3px 5px !important;
+  }
+}
