--- a/public/css/plugins/invoice.css
+++ b/public/css/plugins/invoice.css
@@ -277,16 +277,125 @@ blink {
 .ver-btn:hover {
     border: 1.4px solid rgb(6, 231, 225) !important;
 }
-.phone-btn {
-    background: lightgreen !important;
-}
-.phone-btn:hover {
-    border: 1.4px solid forestgreen !important;
-}
 
-#bit-coin {
-    border-radius: 50% !important;
-}
 #logo {
     border-radius: 50% !important;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#profile-logo {
+    border-radius: 0 !important;
+  }
+  #profile-logo img {
+    border-radius: 0 !important;
+  }
+  
+
+#profileModal .modal-dialog {
+    top: 9vh !important;
+    min-width: 28vw !important;
+  }
+  @media screen and (min-width: 1370px) {
+    #profileModal .modal-dialog {
+      top: 12vh !important;
+      min-width: 24.7vw !important;
+    }
+  }
+  @media screen and (max-width: 1025px) {
+    #profileModal .modal-dialog {
+      top: 20vh !important;
+      max-width: 40vw !important;
+    }
+  }
+  @media screen and (max-width: 825px) {
+    #profileModal .modal-dialog {
+      top: 20vh !important;
+      max-width: 50vw !important;
+    }
+  }
+  
+  @media screen and (max-width: 570px) {
+    #profileModal .modal-dialog {
+      top: 17vh !important;
+      max-width: 81.3vw !important;
+    }
+  }
+  @media screen and (max-width: 420px) {
+    #profileModal .modal-dialog {
+      top: 17vh !important;
+      max-width: 84.5vw !important;
+    }
+  }
+  
+  
+  @media screen and (max-width: 376px) {
+    #profileModal .modal-dialog {
+        top: 17vh !important;
+        max-width: 88vw !important;
+    }
+  }
+  
+  
+  #profileModal .modal-dialog {
+    background: transparent !important;
+  }
+  
+  #profileModal .modal-header {
+    margin: 2px;
+    padding: 0;
+    border-bottom: none;
+  }
+  
+  
+  #profileModal .modal-header img {
+    width: 70px;
+  }
+  
+  #profileModal .modal-header h4.modal-title {
+    font-weight: 600;
+  }
+  
+  #profileModal .modal-header .close img {
+    width: 30px;
+    opacity: 0.7;
+    border-radius: 50%;
+    opacity: 1 !important;
+  }
+  
+  #profileModal .modal-footer {
+    margin: 4px;
+    border-top: none;
+    padding: 0;
+  }
+  #profileModal .modal-body {
+    margin: 0;
+    padding: 0;
+    background: transparent !important;
+  }
+  
+  #profileModal .modal-backdrop div p {
+    background: transparent !important;
+  }
