--- a/public/css/plugins/app.css
+++ b/public/css/plugins/app.css
@@ -1047,7 +1047,7 @@ td {
   opacity: 1 !important;
   border: none !important;
   width: 60px !important;
-  border-radius: 0px;
+  border-radius: 4px !important;
   height: 60px !important;
 }
 
