--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -235,11 +235,11 @@
 
 .border{
   border: 1.5px solid rgba(135, 206, 235, 0.15) !important;
-  margin: 20px auto !important;
+  margin: 37px auto !important;
 }
 @media screen and (max-width: 570px) {
   .border{
-    margin: 65px auto !important;
+    margin: 100px auto !important;
   }
 }
 
@@ -258,8 +258,8 @@
 }
 @media screen and (max-width: 591px){
   .banner-col {
-      margin-top: -48px !important;
-      margin-bottom: -16px !important;
+      margin-top: -30px !important;
+      margin-bottom: -30px !important;
   }
 }
   
@@ -351,8 +351,8 @@ blink {
 
 
 #vpn {
-  top: 10vh !important;
-  bottom: 60px !important;
+  top: 0vh !important;
+  bottom: 0px !important;
   letter-spacing: 1.3px !important;
   font-size: 25px !important;
   opacity: 1 !important;
@@ -364,7 +364,29 @@ blink {
 }
 
 #vpn img {
-  width: 27.5px !important;
-  height: 30px !important;
+  width: 30px !important;
+  height: 33px !important;
   margin: -2px 2px -1px 2px !important;
+}
+
+@media screen and (min-width: 870px) {
+  #vpn {
+    top: 10vh !important;
+    bottom: 60px !important;
+    letter-spacing: 1.5px !important;
+    font-size: 30px !important;
+    opacity: 1 !important;
+    padding: 11px 14px !important;
+  
+    border: 1.3px solid rgb(31, 67, 87) !important;
+    background: rgb(194, 234, 239) !important;
+    box-shadow: 0 0 0 1px rgb(134, 213, 224) !important;
+  }
+  
+  #vpn img {
+    width: 33px !important;
+    height: 37px !important;
+    margin: -2px 2px -1px 2px !important;
+  }
+  
 }
