--- a/public/css/plugins/nav-menu.css
+++ b/public/css/plugins/nav-menu.css
@@ -394,7 +394,7 @@ header.scrollHeader .navbar-default {
   font-weight: 700;
   color: white;
   text-transform: uppercase !important;
-  margin: 3px 0 10px !important;
+  margin: 3px -50px 10px 0 !important;
   padding: 0 !important;
   letter-spacing: 0.85px !important;
   font-size: 23px;
