--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -196,7 +196,8 @@ blink {
   padding: 11px 14px !important;
 
   border: 1.4px solid rgb(31, 67, 87) !important;
-  background: rgb(194, 234, 239) !important;
+  /* background: rgb(194, 234, 239) !important; */
+  background: lightcyan !important;
   box-shadow: 0 0 0 1.1px rgb(134, 213, 224) !important;
 }
 
@@ -214,10 +215,7 @@ blink {
     font-size: 29px !important;
     opacity: 1 !important;
     padding: 11px 14px !important;
-  
-    border: 1.3px solid rgb(31, 67, 87) !important;
-    background: rgb(194, 234, 239) !important;
-    box-shadow: 0 0 0 1px rgb(134, 213, 224) !important;
+
   }
   
   #vpn img {
