--- a/public/css/plugins/nav-menu.css
+++ b/public/css/plugins/nav-menu.css
@@ -394,7 +394,7 @@ header.scrollHeader .navbar-default {
   font-weight: 700;
   color: white;
   text-transform: uppercase !important;
-  margin: 3px -50px 10px 0 !important;
+  margin: 3px -65px 10px 0 !important;
   padding: 0 !important;
   letter-spacing: 0.85px !important;
   font-size: 23px;
@@ -406,15 +406,12 @@ header.scrollHeader .navbar-default {
   border: none !important;
   background: transparent !important;
 }
-@media screen and (max-width: 795px) {
-  #jinaHolder {
-    margin: 3px -0px 10px !important;
-  }
-}
+
 #jinaHolder2 {
   font-weight: 700;
   color: white;
   font-size: 16.5px !important;
+  width: 90% !important;
   letter-spacing: 0.4px !important;
   text-transform: none !important;
   overflow: hidden !important;
