--- a/public/css/plugins/index.css
+++ b/public/css/plugins/index.css
@@ -195,10 +195,11 @@ blink {
   opacity: 1 !important;
   padding: 11px 14px !important;
 
-  border: 1.4px solid rgb(31, 67, 87) !important;
+  border: 2px solid rgb(31, 67, 87) !important;
   /* background: rgb(194, 234, 239) !important; */
   background: lightcyan !important;
-  box-shadow: 0 0 0 1.1px rgb(134, 213, 224) !important;
+  /* box-shadow: 0 0 0 1.1px rgb(134, 213, 224) !important; */
+  box-shadow: 0 0 0 1.5px lightcyan !important;
 }
 
 #vpn img {
@@ -224,4 +225,9 @@ blink {
     margin: -2px 5px -1px 3px !important;
   }
   
+}
+
+#depo-logo img,
+#sign-logo img {
+  border-radius: 0% !important;
 }
