--- a/public/css/plugins/nav-menu.css
+++ b/public/css/plugins/nav-menu.css
@@ -411,11 +411,10 @@ header.scrollHeader .navbar-default {
   font-weight: 700;
   color: white;
   font-size: 16.5px !important;
-  width: 100% !important;
-  letter-spacing: 0.4px !important;
+  width: 90% !important;
+  letter-spacing: 0.7px !important;
   text-transform: none !important;
-  overflow: hidden !important;
-  overflow-x: scroll !important;
+  overflow: scroll !important;
   white-space: nowrap !important;
 }
 #jinaHolder::-webkit-scrollbar,
@@ -424,7 +423,6 @@ header.scrollHeader .navbar-default {
 }
 #jinaHolder2::-webkit-scrollbar {
   height: 1.2px !important;
-  display: block !important;
 }
 @media (min-width: 569px) and (max-width: 1091px) {
   #jinaHolder {
